bugfix: top right item of the header not correctly aligned on Samsung browser and Safari...

--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_footer.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_footer.scss
@@ -45,7 +45,6 @@ footer {
 }
 @media (max-width: 1299px) {
     .lang {
-        width: calc(100% - 95px);
         justify-content: flex-end;
         margin-bottom: 10px;
     }
